<resources>
    <string name="app_name">ALC Challenge</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="about_alc">ABOUT ALC</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="track">Track:</string>
    <string name="country">Country:</string>
    <string name="email">Email:</string>
    <string name="slack_username">Slack Username:</string>
    <string name="phone_number">Phone number:</string>
</resources>
