<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/toolbar" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/profile"
                android:layout_gravity="center"
                android:src="@drawable/alc_icon"
                android:layout_marginTop="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/my_profile" />
            <TextView
                android:id="@+id/name"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:typeface="sans"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary" />
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/track"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/track"
                    android:layout_width="0dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_weight="1.3"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/country"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/country"
                    android:layout_width="0dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_weight="1.3"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/email"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_weight="1.3"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/phone_number"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/phone_number"
                    android:layout_width="0dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_weight="1.3"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/slack_username"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/slack_username"
                    android:layout_width="0dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_weight="1.3"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>